[package]
name = "dungeon_map"
version = "0.1.0"
edition = "2021"

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", version = "0.7", features = ["im"]}
druid-widget-nursery = {git = "https://github.com/linebender/druid-widget-nursery.git"}
#druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
#
#[dependencies.druid]
#git = "https://github.com/linebender/druid"
#rev = "fc05e965c85fced8720c655685e02478e0530e94" 
#eatures = ["im", "svg", "image"]
#[patch.'https://github.com/linebender/druid'.druid]
#git = "https://github.com/linebender/druid"
#rev = "fc05e965c85fced8720c655685e02478e0530e94"


