[package]
name = "dungeon_map"
version = "0.1.0"
edition = "2021"

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", version = "0.7", features = ["im"]}
druid-widget-nursery = {git = "https://github.com/linebender/druid-widget-nursery.git"}
chrono = "0.4"
image = "0.23.14"
imagesize = "0.10"
